# halfband

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: bench.rs
examples/: clipper_fir.rs  clipper_iir.rs  measure_delay_fir.rs  measure_delay_fir_4x.rs  measure_delay_iir.rs  measure_delay_iir_4x.rs
examples/util/: mod.rs
script/: calc_fir.py  test_hiir.cpp
src/: fir.rs  iir.rs  iir_design.rs  lib.rs
src/fir/: design.rs  presets.rs  types.rs
src/iir/: design.rs  types.rs
