[package]
name = "halfband"
version = "0.1.0"
edition = "2024"
authors = ["sintel"]
license = "MIT"
repository = "https://github.com/Sin-tel/halfband"
homepage = "https://github.com/Sin-tel/halfband"
readme = "README.md"
keywords = ["dsp", "audio"]
description = "A high-performance 2x resampling library for audio signals using polyphase designs."
categories = ["multimedia::audio"]

[dependencies]
bit_mask_ring_buf = "0.6"
paste = "1.0"
windowfunctions = "0.1"

[dev-dependencies]
hound = "3.5"
criterion = "0.7"
approx = "0.5"

[[bench]]
name = "bench"
harness = false
